Get all actors works
